<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="exit_application">Exit Datamyne Mobile</string>
    <string name="work_online">Go online</string>
    <string name="work_online_message">You are working in online mode.</string>
    
    <string name="work_offline">Go offline</string>
    <string name="work_offline_message">You are working in offline mode, only previously saved profiles are available.</string>
    
    <string name="hello">Hello World, PruebajsonxmlActivity!</string>
    <string name="buscar">Buscar</string>
    <string name="pager">Pager</string>
    <string name="query_hint">Search Consignees</string>

    <string name="consignee_partner">Suppliers</string>
    <string name="consignee_country">Countries</string>
    <string name="consignee_product">Products</string>
    <string name="consignee_port">Ports</string>
    
    
    <string name="app_name">Datamyne Mobile</string>
    <string name="description_logo">asdadasdadasd</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_my_account">My Account</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_my_account">My Account</string>
    <string name="title_trade_profiles">Trade Profiles</string>
    <string name="title_feature">Feature</string>

    <string name="about_intro">This is the About content</string>
    <string name="search_intro">This is the Search content</string>
    <string name="feature_intro">This is a feature</string>
    <string name="my_account_intro">This is My Account</string>
    <string name="trade_profiles_intro">This is the Trade Profiles</string>
    <string name="btn_query_shipper">Shipper</string>
    <string name="btn_query_consignee">Consignee</string>
    <string name="txt_btn_query_consignee">Consignees</string>
    <string name="txt_btn_query_shipper">Shippers</string>
    <string name="port_8082_proxy">Port 8082 Proxy</string>
    <string name="beta_server">Beta Server</string>
    <string name="production">Production</string>


</resources>